# shakujo

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
analyzer/: CMakeLists.txt
analyzer/examples/recognizer/: CMakeLists.txt  main.cpp
analyzer/include/shakujo/analyzer/: Analyzer.h  AnalyzerContext.h  Diagnostic.h  Optimizer.h  Reporter.h  SyntaxValidator.h  doxygen.h
analyzer/src/: Analyzer.cpp  AnalyzerContext.cpp  CMakeLists.txt  Diagnostic.cpp  Optimizer.cpp  SyntaxValidator.cpp
analyzer/src/analyze/: AggregationAnalyzer.cpp  AggregationAnalyzer.h  Engine.cpp  Engine.h  RelationScope.h  ScopeContext.h  typing.h
analyzer/src/binding/: BindingContext.cpp  BindingSerializer.cpp  ExpressionBinding.cpp  FunctionBinding.cpp  RelationBinding.cpp  VariableBinding.cpp
analyzer/src/impl/: AggregationAnalyzer.cpp  AggregationAnalyzer.h  Engine.cpp  Engine.h  RelationScope.cpp  RelationScope.h  ScopeContext.h  typing.cpp  typing.h
analyzer/src/optimize/: ComparisonTerm.cpp  ComparisonTerm.h  Context.h  FixRelationInfo.cpp  FixRelationInfo.h  PredicatePushDown.cpp  PredicatePushDown.h  ProjectionPushDown.cpp  ProjectionPushDown.h  SelectJoin.cpp  SelectJoin.h  SelectScan.cpp  SelectScan.h  SimplifyCast.cpp  SimplifyCast.h  SimplifyPredicate.cpp  SimplifyPredicate.h  VariableRewriter.cpp  VariableRewriter.h
analyzer/test/: AnalyzerDdlTest.cpp  AnalyzerDmlTest.cpp  AnalyzerExpressionTest.cpp  AnalyzerProgramTest.cpp  AnalyzerRelationTest.cpp  AnalyzerStatementTest.cpp  AnalyzerTestBase.h  CMakeLists.txt  DiagnosticTest.cpp  OptimizerTest.cpp  SyntaxValidatorDdlTest.cpp  SyntaxValidatorDmlTest.cpp  SyntaxValidatorExpressionTest.cpp  SyntaxValidatorProgramTest.cpp  SyntaxValidatorRelationTest.cpp  SyntaxValidatorStatementTest.cpp  SyntaxValidatorTestBase.h  main.cpp
analyzer/test/analyze/: TypingTest.cpp
analyzer/test/binding/: BindingContextTest.cpp  ExpressionBindingTest.cpp  IdTest.cpp
analyzer/test/impl/: TypingTest.cpp
analyzer/test/optimize/: ComparisonTermTest.cpp  FixRelationInfoTest.cpp  PredicatePushDownTest.cpp  ProjectionPushDownTest.cpp  SelectJoinTest.cpp  SelectScanTest.cpp  SimplifyPredicateTest.cpp  VariableRewriterTest.cpp
analyzer/test/scope/: BlockScopeTest.cpp  TableTest.cpp
common/: CMakeLists.txt
common/include/shakujo/common/: doxygen.h
common/src/: CMakeLists.txt
common/src/api/: ListResultSet.cpp  ResultSet.cpp
common/src/core/: DocumentRegion.cpp  Name.cpp  Type.cpp  Value.cpp
common/src/schema/: IndexInfo.cpp  StorageInfoProvider.cpp  TableInfo.cpp
common/src/util/: JsonSerializer.cpp
common/test/: CMakeLists.txt
common/test/api/: ListResultSetTest.cpp
common/test/core/: DocumentRegionTest.cpp  NameTest.cpp  TypeTest.cpp  ValueTest.cpp
common/test/schema/: ConfigurableStorageInfoProviderTest.cpp
common/test/util/: ClonablePtrTest.cpp  ManagedPtrTest.cpp  ManagedTest.cpp  utilityTest.cpp
examples/analyzer/: CMakeLists.txt  main.cpp
examples/parser/: CMakeLists.txt  main.cpp
examples/visitor/: CMakeLists.txt  main.cpp
model/: CMakeLists.txt
model/examples/visitor/: CMakeLists.txt  main.cpp
model/include/shakujo/model/: IRFactory.h  IRFactoryBase.h  Node.h  doxygen.h
model/src/: CMakeLists.txt  IRFactory.cpp  IRFactoryBase.cpp
model/src/expression/: ArrayCreationExpression.cpp  ArrayElementLoadExpression.cpp  ArrayElementStoreExpression.cpp  AssignExpression.cpp  BinaryOperator.cpp  BlockExpression.cpp  CaseExpression.cpp  CursorAdvanceExpression.cpp  CursorCreationExpression.cpp  CursorElementLoadExpression.cpp  ExpressionKind.cpp  FunctionCall.cpp  ImplicitCast.cpp  Literal.cpp  Placeholder.cpp  StringOperator.cpp  TupleCreationExpression.cpp  TupleElementLoadExpression.cpp  TupleElementStoreExpression.cpp  TypeOperator.cpp  UnaryOperator.cpp  VariableReference.cpp  VectorCreationExpression.cpp  VectorElementLoadExpression.cpp  VectorElementStoreExpression.cpp  VectorLengthExpression.cpp
model/src/expression/relation/: AggregationExpression.cpp  DistinctExpression.cpp  GroupExpression.cpp  JoinExpression.cpp  LimitExpression.cpp  OrderExpression.cpp  ProjectionExpression.cpp  RenameExpression.cpp  ScanExpression.cpp  (+1 more)
model/src/name/: Index.cpp  Name.cpp  NameKind.cpp  QualifiedName.cpp  SimpleName.cpp
model/src/program/: Comment.cpp  GlobalDeclaration.cpp  GlobalDeclarationKind.cpp  GlobalFunctionDeclaration.cpp  GlobalVariableDeclaration.cpp  Program.cpp
model/src/statement/: AnchorDeclaration.cpp  BlockStatement.cpp  BranchStatement.cpp  BreakStatement.cpp  ContinueStatement.cpp  EmptyStatement.cpp  ExpressionStatement.cpp  ForEachStatement.cpp  ForStatement.cpp  LocalVariableDeclaration.cpp  LogStatement.cpp  RaiseStatement.cpp  ReturnStatement.cpp  StatementKind.cpp  VectorElementDeleteStatement.cpp  VectorElementInsertStatement.cpp  WhileStatement.cpp
model/src/type/: ArrayType.cpp  BinaryType.cpp  BooleanType.cpp  CharType.cpp  DateType.cpp  DecimalType.cpp  Float32Type.cpp  Float64Type.cpp  Int32Type.cpp  Int64Type.cpp  NullType.cpp  RelationType.cpp  StringType.cpp  TimeType.cpp  TimestampType.cpp  TupleType.cpp  Type.cpp  TypeKind.cpp  VarBinaryType.cpp  VarCharType.cpp  VectorType.cpp
model/src/util/: ConstNodeWalker.cpp  NodeSerializer.cpp  NodeSerializerBase.cpp  NodeWalker.cpp  PlaceholderResolver.cpp
model/test/: CMakeLists.txt  IRFactoryTest.cpp  NodeTest.cpp
model/test/util/: NodeListBaseTest.cpp  PlaceholderResolverTest.cpp
parser/: CMakeLists.txt
parser/examples/: CMakeLists.txt
parser/examples/recognizer/: CMakeLists.txt
parser/src/: CMakeLists.txt  Parser.cpp
parser/src/grammar/: CaseInsensitiveLexerRules.g4  ShakujoLexer.g4  ShakujoParser.g4  SqlLexerRules.g4  SqlParserRules.g4  WhitespaceLexerRules.g4
parser/src/impl/: Engine.cpp  Engine.h
parser/test/: CMakeLists.txt  ParserCreateIndexTest.cpp  ParserCreateTableTest.cpp  ParserDeleteTest.cpp  ParserDropIndexTest.cpp  ParserDropTableTest.cpp  ParserExpressionTest.cpp  ParserInsertTest.cpp  ParserProgramTest.cpp  ParserQueryTest.cpp  ParserTestBase.h  ParserUpdateTest.cpp  main.cpp
(+408 files in other folders)
